cmake_minimum_required(VERSION 3.17)
project(IP_C__Projects)

set(CMAKE_CXX_STANDARD 14)


include_directories(lab2)
include_directories(lab1)
include_directories(lab3)
include_directories(lab6)

add_executable(IP_C__Projects
#        main.cpp
#        lab1/Lab1.h
#        lab2/lab2.cpp
#        lab3/Q2/NamePair.cpp
#        lab3/Q3/BookChrono.cpp
#        lab3/Q3/BookMylib.cpp
#        lab3/Q3/Book.cpp
#        lab3/Q4/Patron.cpp
#        lab3/Q4/PatronChrono.cpp
#        lab3/Q4/PatronMylib.cpp
         lab6/Q1/Money.cpp
#         lab6/Q2/MoneyRefine.cpp
#         lab6/Q3/Rational.cpp
#         lab6/Q3/Rational.h
#         lab6/Q3/RationalMath.cppq
        )
